# pulumi-ui

./: .gitignore  .projenrc.py  CONTRIBUTING.md  Makefile  README.md  package.json  pnpm-lock.yaml  run.sh
.projen/: deps.json
pulumi-playground/: Makefile  pyproject.toml  run.sh
pulumi-playground/.pulumi-state/.pulumi/history/pulumi-ui-s3/hello/: hello-1727768685147669000.history.json  hello-1727768685147669000.history.json.attrs
pulumi-playground/.pulumi-state/.pulumi/stacks/pulumi-ui-s3/: hello.json.attrs  hello.json.bak  hello.json.bak.attrs
pulumi-playground/src/pulumi_playground/automation_api_stacks/: Pulumi.yaml  README.md  deploy.py  lambda_rest_api.py
pulumi-playground/src/pulumi_playground/automation_api_stacks/lambda_function/: handler.py  requirements.txt
pulumi-playground/src/pulumi_playground/automation_api_stacks/lambda_layer/: Dockerfile
pulumi-playground/src/pulumi_playground/pulumi_app/: Pulumi.hello.yaml  Pulumi.yaml  __main__.py
pulumi-ui/: package.json
pulumi-ui-backend/: .gitignore  Makefile  pyproject.toml  run.sh
pulumi-ui-backend/src/pulumi_ui/: cli.py  hello.json  main.py  pulumi_state.py  routes.py  schemas.py  settings.py
pulumi-ui-frontend/: Dockerfile  Makefile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
pulumi-ui-frontend/src/: App.tsx  graph.ts  types.ts
pulumi-ui-frontend/src/components/: CustomNode.tsx  NavBar.tsx  ResourceGraph.tsx  ResourceView.tsx  StackExplorerBar.tsx  StackOverviewTab.tsx  StackResourcesGraphView.tsx  StackResourcesGraphViewTab.tsx  StackResourcesListView.tsx  StackResourcesListViewTab.tsx  StackView.tsx  WelcomePage.tsx
tests/: test_example.py
